@@ -9,7 +9,7 @@
     <packaging>pom</packaging>
 
 
-    <name>Lumify</name>
+    <name>Lumify Enterprise</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -25,8 +25,7 @@
         <javadoc.stylesheetfile>conf/maven/javadoc/stylesheet.css</javadoc.stylesheetfile>
         <maven.build.timestamp.format>EEE MMM dd HH:mm z yyyy</maven.build.timestamp.format>
         <classpath-filename>${project.build.directory}/.classpath.${user.name}</classpath-filename>
-        <!--<internal.project.repo>http://nic-mvnproxy.nearinfinity.com:8080/artifactory</internal.project.repo>-->
-        <internal.project.repo>http://63.141.238.205:8081/maven/</internal.project.repo>
+        <internal.project.repo>http://bits.lumify.io/m2/</internal.project.repo>
         <cluster.dependency.scope>compile</cluster.dependency.scope>
     </properties>
 
@@ -214,26 +213,6 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>2.9.1</version>
-                    <configuration>
-                        <stylesheetfile>${basedir}/${javadoc.stylesheetfile}</stylesheetfile>
-                        <show>package</show>
-                        <failOnError>false</failOnError>
-                        <quiet>true</quiet>
-                        <footer>Generated ${maven.build.timestamp}</footer>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <id>attach-javadocs</id>
-                            <goals>
-                                <goal>jar</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-source-plugin</artifactId>
                     <version>2.2.1</version>
                     <executions>
@@ -266,86 +245,6 @@
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>cobertura-maven-plugin</artifactId>
                     <version>2.6</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-site-plugin</artifactId>
-                    <version>3.3</version>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.apache.maven.doxia</groupId>
-                            <artifactId>doxia-module-markdown</artifactId>
-                            <version>1.3</version>
-                        </dependency>
-                    </dependencies>
-                    <configuration>
-                        <siteDirectory>${user.dir}/${site.config.location}</siteDirectory>
-                        <attach>true</attach>
-                        <relativizeDecorationLinks>false</relativizeDecorationLinks>
-                        <reportPlugins>
-                            <plugin>
-                                <groupId>org.apache.maven.plugins</groupId>
-                                <artifactId>maven-project-info-reports-plugin</artifactId>
-                                <version>2.7</version>
-                                <reports>
-                                    <report>index</report>
-                                    <report>summary</report>
-                                    <report>license</report>
-                                    <report>scm</report>
-                                    <report>issue-tracking</report>
-                                    <report>dependencies</report>
-                                    <report>dependency-management</report>
-                                    <report>plugins</report>
-                                    <report>plugin-management</report>
-                                </reports>
-                                <configuration>
-                                    <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
-                                    <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
-                                </configuration>
-                            </plugin>
-                            <plugin>
-                                <groupId>org.apache.maven.plugins</groupId>
-                                <artifactId>maven-javadoc-plugin</artifactId>
-                                <version>2.9.1</version>
-                                <configuration>
-                                    <stylesheetfile>${user.dir}/${javadoc.stylesheetfile}</stylesheetfile>
-                                    <show>package</show>
-                                    <failOnError>false</failOnError>
-                                    <quiet>true</quiet>
-                                    <footer>Generated ${maven.build.timestamp}</footer>
-                                </configuration>
-                            </plugin>
-                            <plugin>
-                                <groupId>org.apache.maven.plugins</groupId>
-                                <artifactId>maven-jxr-plugin</artifactId>
-                                <version>2.3</version>
-                            </plugin>
-                            <plugin>
-                                <groupId>org.apache.maven.plugins</groupId>
-                                <artifactId>maven-surefire-report-plugin</artifactId>
-                                <version>2.16</version>
-                                <configuration>
-                                    <linkXRef>true</linkXRef>
-                                </configuration>
-                            </plugin>
-                            <plugin>
-                                <groupId>org.codehaus.mojo</groupId>
-                                <artifactId>cobertura-maven-plugin</artifactId>
-                                <version>2.6</version>
-                            </plugin>
-                            <plugin>
-                                <groupId>org.codehaus.mojo</groupId>
-                                <artifactId>findbugs-maven-plugin</artifactId>
-                                <version>2.5.2</version>
-                                <configuration>
-                                    <xmlOutput>true</xmlOutput>
-                                    <argLine>-Xmx256m</argLine>
-                                    <argLine>-XX:MaxPermSize=256m</argLine>
-                                </configuration>
-                            </plugin>
-                        </reportPlugins>
-                        <port>9000</port>
-                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
